cmake_minimum_required(VERSION 3.16)

idf_component_register(
     SRCS "main.c"
          "LCD_Driver/Vernon_ST7789T/Vernon_ST7789T.c"
          "LCD_Driver/ST7789.c"
          "LVGL_Driver/LVGL_Driver.c"
          "LVGL_UI/LVGL_Example.c"
          "LVGL_UI/lvgl_robot_control.c"
          "LVGL_UI/lvgl_robot_select.c"
          "LVGL_UI/img_battery1.c"
          "LVGL_UI/img_battery2.c"
          "LVGL_UI/img_battery3.c"
          "LVGL_UI/img_signal1.c"
          "LVGL_UI/img_signal2.c"
          "LVGL_UI/img_signal3.c"
          "SD_Card/SD_SPI.c"
          "RGB/RGB.c"
          "analog.c"
          "gatt_client.c"
          "joy_kb.c"
          "robodrive_comm.c"
          "robodrive_comm_client.c"
     INCLUDE_DIRS
          "./LCD_Driver/Vernon_ST7789T"
          "./LCD_Driver"
          "./LVGL_Driver"
          "./LVGL_UI"
          "./SD_Card"
          "./RGB"
          "."
     )
